--- a/problems/DOM/prompts/product-comparison/styles.css
+++ b/problems/DOM/prompts/product-comparison/styles.css
@@ -9,6 +9,7 @@
 }
 
 .product-card {
+  position: relative;
   display: inline-block;
   vertical-align: top;
   width: 100%;
@@ -33,6 +34,21 @@
   font-weight: 200;
 }
 
+.learn-more {
+  position: absolute;
+  bottom: 8px;
+  height: 25px;
+  width: 100%;
+  max-width: 230px;
+  min-width: 100px;
+  text-align: center;
+  padding-top: 7px;
+  background-color: #717171;
+}
+
+.tooltip {
+  padding-left: 4px;
+}
 
 @media (max-width: 600px) {
 
