--- a/problems/DOM/prompts/product-comparison/styles.css
+++ b/problems/DOM/prompts/product-comparison/styles.css
@@ -5,7 +5,7 @@
   max-width: 800px;
   min-width: 380px;
   /*height: 30px;*/
-  background-color: red;
+  /*background-color: red;*/
 }
 
 .product-card {
@@ -29,6 +29,7 @@
 }
 
 .description {
+  /*position: relative;*/
   font-size: .9rem;
   font-family: sans-serif;
   font-weight: 200;
@@ -44,10 +45,27 @@
   text-align: center;
   padding-top: 7px;
   background-color: #717171;
+  border-radius: 1px;
+  cursor: pointer;
 }
 
-.tooltip {
+.tooltip-img {
   padding-left: 4px;
+}
+.tooltip-div {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  margin-top: 6px;
+  color: white;
+  padding: 5px;
+  width: 90%;
+  border-radius: 3px;
+}
+
+.tooltip-arrow {
+  display: none;
+  position: absolute;
 }
 
 @media (max-width: 600px) {
