--- a/problems/DOM/prompts/product-comparison/styles.css
+++ b/problems/DOM/prompts/product-comparison/styles.css
@@ -4,8 +4,6 @@
   padding: 15px;
   max-width: 800px;
   min-width: 380px;
-  /*height: 30px;*/
-  /*background-color: red;*/
 }
 
 .product-card {
@@ -15,7 +13,6 @@
   width: 100%;
   max-width: 230px;
   min-width: 100px;
-  /*height: 100%;*/
   height: 340px;
   background-color: #979797;
   border: 1px solid black;
@@ -29,7 +26,6 @@
 }
 
 .description {
-  /*position: relative;*/
   font-size: .9rem;
   font-family: sans-serif;
   font-weight: 200;
@@ -68,6 +64,5 @@
   position: absolute;
 }
 
-@media (max-width: 600px) {
-
-}
+/*@media (max-width: 600px) {
+}*/
